[package]
name = "client-plug-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
url = {version="2.5"}
bincode = {version="2.0.0-rc.3", features=["serde"], optional=true}
cfg-if ="1.0"


[features]
default=["product_api_client", "tasks_tracker_api_client", "cache_api_client", "bincode"]
product_api_client=[]
tasks_tracker_api_client=[]
cache_api_client=[]
bincode=["dep:bincode"]
